🔥 Phase 18 Stable — Firebase Auth fixed, working sign-in + redirect

--- a/public/signin.html
+++ b/public/signin.html
@@ -57,6 +57,6 @@
     <p style="color:#666; font-size:0.75rem; margin-top:0.5rem;">© 2025 X-Streamify. All rights reserved.</p>
   </div>
 
-  <script src="/js/auth-gate.js"></script>
+<script type="module" src="/js/auth-gate.js"></script>
 </body>
 </html>
