--- a/backups/public-clean/index.html
+++ b/backups/public-clean/index.html
@@ -114,13 +114,15 @@
               </div>
             </div>
           </div>
-          <div class="relative">
-            <div class="rounded-3xl overflow-hidden ring-1 ring-red-600/40 shadow-glow">
-              <img src="https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=1974&auto=format&fit=crop" alt="Cinema seats" class="w-full h-64 sm:h-80 lg:h-[420px] object-cover" />
-            </div>
-          </div>
-        </div>
-      </div>
+          <div class="flex items-center">
+  <a href="/" class="flex items-center space-x-2">
+<img src="img/red-play-logo.png?v=3" alt="X-Streamify" style="width: 125px; height: auto;" />
+    <span class="text-lg font-semibold text-white">X‑Streamify</span>
+  </a>
+</div>
+
+
+       
     </section>
 
     <!-- Featured -->
