--- a/public/browse.html
+++ b/public/browse.html
@@ -146,7 +146,7 @@
       </nav>
 
       <div class="right">
-        <button class="addBtn">Add Movies</button>
+<button class="addBtn" style="color: white;">Add Movies</button>
         <div class="who">
 <img id="avatar" src="/img/profile1.png" alt="profile" style="width: 48px; height: 48px; border-radius: 50%;" />
           <span id="whoName">Profile</span>
