--- a/public/index copy-001.html
+++ b/public/index copy-001.html
@@ -15,7 +15,7 @@
       font-family: sans-serif;
       background: #0a0a0a;
       color: #f3f3f3;
-      overflow: hidden;
+      overflow-x: hidden;
     }
     .container {
       position: relative;
@@ -24,7 +24,6 @@
       place-items: center;
       text-align: center;
       padding: 40px;
-      height: 100vh;
     }
     h1 {
       font-size: 3rem;
@@ -55,24 +54,7 @@
     
     /* === Layering fix (CSS-only): keep main content above floating background === */
     .container { position: relative; z-index: 2; }
-.floater {
-      position: absolute;
-      top: 0;
-      left: 0;
-      will-change: transform;
-      opacity: 0.5;
-      animation-name: floatAcross, bob;
-      animation-timing-function: linear, ease-in-out;
-      animation-iteration-count: infinite, infinite;
-    }
-    @keyframes floatAcross {
-      from { transform: translate3d(-120vw, var(--y, 0px), 0) rotate(var(--rot, 0deg)) scale(var(--sc, 1)); }
-      to { transform: translate3d(120vw, var(--y, 0px), 0) rotate(calc(var(--rot, 0deg) + var(--spin, 0deg))) scale(var(--sc, 1)); }
-    }
-    @keyframes bob {
-      0%, 100% { translate: 0 -6px; }
-      50% { translate: 0 6px; }
-    }
+
     .icon {
       display: grid;
       place-items: center;
@@ -190,8 +172,93 @@
 .xs-row-btn.right { right:-6px; }
 
 .xs-row-track.grabbing { cursor:grabbing; }
+/* ===== UNIFIED VAULT SECTION ===== */
+
+#unified-vault {
+  position: relative;
+  z-index: 5;
+}
+
+.vault-orbit {
+  position: relative;
+  width: 600px;
+  height: 600px;
+  margin: 80px auto 0;
+}
+
+.vault-core {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 220px;
+  height: 220px;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  background: radial-gradient(circle at 30% 30%, #2aff2a, #0a0a0a 70%);
+  box-shadow: 0 0 60px rgba(0,255,0,0.6),
+              inset 0 0 40px rgba(0,255,0,0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 70px;
+}
+
+/* Orbit Items */
+.orbit-item {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  border-radius: 20px;
+  background: #111;
+  box-shadow: 0 0 25px rgba(0,255,0,0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.orbit-item:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 40px rgba(0,255,0,0.9);
+}
+
+/* Corner Positions */
+.orbit-top-left     { top: 0; left: 0; }
+.orbit-top-right    { top: 0; right: 0; }
+.orbit-bottom-left  { bottom: 0; left: 0; }
+.orbit-bottom-right { bottom: 0; right: 0; }
+
+.floater {
+  position: absolute;
+  top: 0;
+  left: 0;
+  will-change: transform;
+  opacity: 0.5;
+  animation-name: floatAcross, bob;
+  animation-timing-function: linear, ease-in-out;
+  animation-iteration-count: infinite, infinite;
+}
+
+@keyframes floatAcross {
+  from {
+    transform: translate3d(-120vw, var(--y, 0px), 0)
+               rotate(var(--rot, 0deg))
+               scale(var(--sc, 1));
+  }
+  to {
+    transform: translate3d(120vw, var(--y, 0px), 0)
+               rotate(calc(var(--rot, 0deg) + var(--spin, 0deg)))
+               scale(var(--sc, 1));
+  }
+}
+
+@keyframes bob {
+  0%, 100% { translate: 0 -6px; }
+  50% { translate: 0 6px; }
+}
+
 </style>
-  </style>
 </head>
 <body>
   <!-- TOP NAVIGATION BAR -->
@@ -254,6 +321,35 @@
 
 
 
+<!-- ===== UNIFIED VAULT SECTION ===== -->
+<section id="unified-vault" style="position:relative; padding:140px 20px; text-align:center; overflow:hidden;">
+
+  <!-- Headline -->
+  <h2 style="font-size:3.5rem; text-shadow:0 0 25px rgba(0,255,0,0.9); margin-bottom:20px;">
+    Everything You Own. Finally Unified.
+  </h2>
+
+  <p style="font-size:1.3rem; color:#ccc; max-width:800px; margin:0 auto 100px;">
+    Movies, memories, and important documents — all secured inside one powerful digital Vault.
+  </p>
+
+  <!-- Orbital Container -->
+  <div class="vault-orbit">
+
+    <!-- CENTER VAULT -->
+    <div class="vault-core">
+      🔒
+    </div>
+
+    <!-- CORNER ICONS -->
+    <div class="orbit-item orbit-top-left">🎬</div>
+    <div class="orbit-item orbit-top-right">📸</div>
+    <div class="orbit-item orbit-bottom-left">📄</div>
+    <div class="orbit-item orbit-bottom-right">☁️</div>
+
+  </div>
+
+</section>
 
 
 
