--- a/public/index copy-018.html
+++ b/public/index copy-018.html
@@ -513,7 +513,7 @@ function selectPB(type){
   <!-- Horizontal Info Box 1 -->
 <div class="box-link" style="cursor:pointer;">
   <div class="info-box" style="display: flex; align-items: center; gap: 10px; background: #2d2d2d; padding: 20px 40px; margin: 25px auto; max-width:1200px; width:100%; border: 2px solid rgb(0, 255, 0); border-radius: 12px;">
-    <span style="width:2.5em; text-align:center; margin-right:60px;">
+    <span style="width:2.5em; text-align:center; margin-right:50px;">
   <img src="img/icon-add-media.png" alt="Add Media" style="width:100px; height:auto;">
 </span>
 <span data-i18n="hiw1.title" style="font-weight:normal;font-size:1.2em;">Add Your Media: Upload or import directly into your secure Vault.</span>
@@ -556,7 +556,7 @@ applyTranslations();">
   onmouseout="this.style.transform='scale(1)'; this.style.boxShadow='0 0 8px 2px rgba(0,255,0,0.7)';"
 >
 
-  <span style="width:2.5em; text-align:center; margin-right:70px;">
+  <span style="width:2.5em; text-align:center; margin-right:60px;">
   <img src="img/icon-stream-anywhere.png" alt="Stream Anywhere" style="width:100px;height:auto;">
 </span>
 
@@ -747,14 +747,10 @@ box-shadow: 0 0 20px rgb(0, 255, 0), 0 0 40px rgb(0, 255, 0); animation:pulse 2s
     <div class="grid gap-8 md:grid-cols-2 text-left">
       
       <!-- 🔴 Import Disc -->
-      <div class="p-6 bg-zinc-900 rounded-xl shadow-lg hover:scale-105 transition-transform"style="margin-bottom:60px;">
-        <div style="position:relative; display:inline-block; margin-bottom:-10px;">
-  <img src="img/icon-import-disc.png" alt="Import Disc"
-       style="position:absolute; left:-130px; top:50%; transform:translateY(-50%); width:180px; height:auto;">
-  <h2 data-i18n="addmovie.import.title" style="margin-top:20px;font-size:24px;">
-    <strong>Import Disc</strong>
-  </h2>
-</div>
+      <div class="p-6 bg-zinc-900 rounded-xl shadow-lg hover:scale-105 transition-transform">
+        <h2 data-i18n="addmovie.import.title" style="margin-top:20px;font-size:24px;">
+  💿 <strong>Import Disc</strong>
+</h2>
 <p data-i18n="addmovie.import.desc" style="font-size:18px; max-width:800px; margin:10px auto;">
   Import with X-StreamPort
   Use your X-StreamPort to transfer your DVDs directly into your secure digital vault.
@@ -763,13 +759,9 @@ box-shadow: 0 0 20px rgb(0, 255, 0), 0 0 40px rgb(0, 255, 0); animation:pulse 2s
 
       <!-- 🔴 Upload File -->
       <div class="p-6 bg-zinc-900 rounded-xl shadow-lg hover:scale-105 transition-transform">
-        <div style="position:relative; display:inline-block; margin-bottom:10px;">
-  <img src="img/icon-add-media.png" alt="Upload File"
-       style="position:absolute; left:-150px; top:50%; transform:translateY(-50%); width:160px; height:auto;">
-  <h2 data-i18n="addmovie.upload.title" style="margin-top:20px;font-size:24px;">
-    <strong>Upload File</strong>
-  </h2>
-</div>
+        <h2 data-i18n="addmovie.upload.title" style="margin-top:20px;font-size:24px;">
+  ⬆️ <strong>Upload File</strong>
+</h2>
 <p data-i18n="addmovie.upload.desc" style="font-size:18px; max-width:800px; margin:10px auto;">
   Upload from Any Device
 Drag and drop your photos, videos, and important documents from your phone, tablet, or computer — instantly into your vault.
@@ -787,14 +779,9 @@ Drag and drop your photos, videos, and important documents from your phone, tabl
   <div class="max-w-6xl mx-auto px-4">
     <div style="margin-top: 180px;"></div>
 
-  <div style="position:relative; display:inline-block; margin-top:240px; margin-bottom:40px;">
-  <img src="img/icon-collection.png" alt="Your Collection"
-       style="position:absolute; left:-180px; top:50%; transform:translateY(-50%); width:240px; height:auto;">
-  <h2 data-i18n="vault.title"
-      style="font-size:52px; font-weight:bold; text-shadow:0 0 24px rgba(0, 255, 0, 0.9);">
-    Your Collection
-  </h2>
-</div>
+  <h2 data-i18n="vault.title" style="font-size:52px; font-weight:bold; margin-top:380px; margin-bottom:40px; text-shadow:0 0 24px rgba(0, 255, 0, 0.9);">
+  🗂️ Your Collection
+</h2>
 
 
 
@@ -814,14 +801,9 @@ Drag and drop your photos, videos, and important documents from your phone, tabl
 
       <!-- Featured Section -->
 <div class="space-y-2 mb-6">
-  <div style="position:relative; display:inline-block; margin-bottom:40px;">
-  <img src="img/icon-library.png" alt="Your Library"
-       style="position:absolute; left:-180px; top:50%; transform:translateY(-50%); width:240px; height:auto;">
-  <h2 data-i18n="featured.title"
-      style="font-size:52px; font-weight:bold; text-shadow:0 0 24px rgba(0, 255, 0, 0.9);">
-    Your Library
-  </h2>
-</div>
+  <h2 data-i18n="featured.title" style="font-size:52px; font-weight:bold; margin-bottom:40px; text-shadow: 0 0 24px rgba(0, 255, 0, 0.9);">
+  📚 Your Library
+</h2>
 
  <!-- 🎯 Featured Section (Horizontal Movie Cards) -->
 <div style="width: 100%; max-width: 1280px; margin: 80px auto 60px auto; padding: 40px 20px 20px 20px; border: 2px solid #39FF14; border-radius: 20px; box-shadow: 0 0 30px #39FF14;">
@@ -962,14 +944,9 @@ else { el.textContent = map[type]; }
    <!-- ADD + UPLOAD + STREAM + VAULT -->
 <section class="w-full max-w-screen-xl mx-auto px-6 mt-32">
   <div style="height: 90px;"></div>
-  <div style="position:relative; display:inline-block; margin-top:380px; margin-bottom:40px;">
-  <img src="img/icon-own-control.png" alt="Own your media"
-       style="position:absolute; left:-200px; top:50%; transform:translateY(-50%); width:250px; height:auto;">
-  <h2 data-i18n="footer.title"
-      style="font-size:52px; font-weight:bold; text-shadow:0 0 24px rgba(0, 255, 0, 0.9);">
-    Own your media. Stream your world 
-  </h2>
-</div>
+  <h2 data-i18n="footer.title" style="font-size:52px; font-weight:bold; margin-top:380px; margin-bottom:40px; text-shadow: 0 0 24px rgb(0, 255, 0);">
+   “Own your media. Stream your world” ✅
+</h2>
 
 
   
